; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_hmac.c_cf_hmac.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_hmac.c_cf_hmac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cf_hmac(i32* %0, i64 %1, i32* %2, i64 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i64 %1, i64* %8, align 8
  store i32* %2, i32** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %14 = load i32*, i32** %11, align 8
  %15 = call i32 @assert(i32* %14)
  %16 = load i32*, i32** %12, align 8
  %17 = call i32 @assert(i32* %16)
  %18 = load i32*, i32** %12, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = load i64, i64* %8, align 8
  %21 = call i32 @cf_hmac_init(i32* %13, i32* %18, i32* %19, i64 %20)
  %22 = load i32*, i32** %9, align 8
  %23 = load i64, i64* %10, align 8
  %24 = call i32 @cf_hmac_update(i32* %13, i32* %22, i64 %23)
  %25 = load i32*, i32** %11, align 8
  %26 = call i32 @cf_hmac_finish(i32* %13, i32* %25)
  ret void
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @cf_hmac_init(i32*, i32*, i32*, i64) #1

declare dso_local i32 @cf_hmac_update(i32*, i32*, i64) #1

declare dso_local i32 @cf_hmac_finish(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
